force-app/main/default/objects/Vehicle_Dealer__c/fields/Dealer_Code__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Code__c</fullName>
    <displayFormat>DC-{0000}</displayFormat>
    <label>Dealer_Code</label>
    <type>AutoNumber</type>
</CustomField>