force-app/main/default/objects/Vehicle_Dealer__c/fields/Dealer_Name__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Name__c</fullName>
    <label>Dealer Name</label>
    <length>18</length>
    <type>Text</type>
</CustomField>